# gpuview

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker_run.sh  poetry_run.sh  pyproject.toml  requirements.txt  setup.py
docker/: entrypoint.sh
gpuview/: .gitignore  __init__.py  __main__.py  app.py  core.py  service.sh  todo.md  utils.py  worker.py
gpuview/static/css/: my.css  my.css.map  my.scss
gpuview/views/: block.html  block.tpl  content.html  content.tpl  index.html  index.tpl
