[tool.poetry]
name = "gpuview"
version = "0.1.0"
description = ""
authors = ["Atsushi Yamada <a.yamada0703@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gpustat = "^0.5.0"
flask = "*"
pymemcache = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
